WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267715
REGRESSION(
273101@main
?): [ wk2 debug ] imported/w3c/web-platform-tests/css/css-flexbox/anonymous-flex-item-006.html is flakily crashing.
https://bugs.webkit.org/show_bug.cgi?id=267715
Summary
REGRESSION(273101@main?): [ wk2 debug ] imported/w3c/web-platform-tests/css/c...
Ben Schwartz
Reported
2024-01-18 11:29:11 PST
imported/w3c/web-platform-tests/css/css-flexbox/anonymous-flex-item-006.html This test is flakily crashing on wk2 debug. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-flexbox%2Fanonymous-flex-item-006.html&flavor=wk2&style=debug
CRASH LOG: ASSERTION FAILED: ptr /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/WeakRef.h(80) : T *WTF::WeakRef<const WebCore::RenderBox, WTF::SingleThreadWeakPtrImpl>::ptr() const [T = const WebCore::RenderBox, WeakPtrImpl = WTF::SingleThreadWeakPtrImpl] 1 0x122406489 WTFCrash 2 0x170fe814b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1763dfa92 WTF::WeakRef<WebCore::RenderBox const, WTF::SingleThreadWeakPtrImpl>::ptr() const 4 0x1763dfa15 WTF::GetPtrHelper<WTF::WeakRef<WebCore::RenderBox const, WTF::SingleThreadWeakPtrImpl>>::getPtr(WTF::WeakRef<WebCore::RenderBox const, WTF::SingleThreadWeakPtrImpl> const&) 5 0x1763df9f5 WTF::GetPtrHelper<WTF::WeakRef<WebCore::RenderBox const, WTF::SingleThreadWeakPtrImpl>>::PtrType WTF::getPtr<WTF::WeakRef<WebCore::RenderBox const, WTF::SingleThreadWeakPtrImpl>>(WTF::WeakRef<WebCore::RenderBox const, WTF::SingleThreadWeakPtrImpl> const&) ... CRASH LOG LINK:
https://build.webkit.org/results/Apple-Sonoma-Debug-WK1-Tests/273103@main%20(604)/imported/w3c/web-platform-tests/css/css-flexbox/anonymous-flex-item-006-crash-log.txt
REPRODUCIBILITY: I was able to reproduce this issue on macOS Sonoma (14.2, 23C71/arm64) ToT using the following command: run-webkit-tests --debug --clobber-old-results -v --child-processes 10 --iterations 250 -f imported/w3c/web-platform-tests/css/css-flexbox/anonymous-flex-item-006.html --exit-after-n-failures 1 REGRESSION: This test appears to have regressed between
273097@main
and
273104@main
. Contextual information indicates that the regression point may be
273101@main
, given that changes at that point appear to be directly related to this issue.
Attachments
full-crash-log.txt
(9.64 KB, text/plain)
2024-01-18 11:41 PST
,
Ben Schwartz
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-18 11:29:48 PST
<
rdar://problem/121206812
>
Ben Schwartz
Comment 2
2024-01-18 11:41:55 PST
Created
attachment 469445
[details]
full-crash-log.txt Adding full crash log to bug for future reference.
EWS
Comment 3
2024-01-18 11:58:21 PST
Test gardening commit
273189@main
(f7d8a27181cc): <
https://commits.webkit.org/273189@main
> Reviewed commits have been landed. Closing PR #22929 and removing active labels.
Chris Dumez
Comment 4
2024-01-18 12:58:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22934
Tim Nguyen (:ntim)
Comment 5
2024-01-18 14:04:43 PST
***
Bug 267638
has been marked as a duplicate of this bug. ***
EWS
Comment 6
2024-01-18 14:40:51 PST
Committed
273192@main
(43e9932d0120): <
https://commits.webkit.org/273192@main
> Reviewed commits have been landed. Closing PR #22934 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug