REGRESSION(273101@main?): [ wk2 debug ] imported/w3c/web-platform-tests/css/css-flexbox/anonymous-flex-item-006.html is flakily crashing. https://bugs.webkit.org/show_bug.cgi?id=267715 rdar://121206812

Reviewed by Alan Baradlay.

The RenderFlexibleBox::m_intrinsicSizeAlongMainAxis HashMap could end up
with stale pointer as keys and adopting smart pointers in 273101@main
exposed this bug.

To address the issue, make sure RenderBox renderers remove themselves from
their parent's map when getting detached from the render tree.

* LayoutTests/platform/wk2/TestExpectations:
Unskip flaky test.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::willBeRemovedFromTree):
* Source/WebCore/rendering/RenderBox.h:

Canonical link: https://commits.webkit.org/273192@main